# hopf

./: Cargo.toml  README.md  hopf.blend  todo.md
bevy_hopf/: Cargo.toml  cargo.txt  d.sh  go.sh  prod.sh
bevy_hopf/assets/models/: FlatCompass.gltf
bevy_hopf/examples/: interactive.rs
bevy_hopf/examples/blender/: FlatCompass.blend  FlatCompass.blend1  PointerAnisotropy.blend  PointerAnisotropy.blend1  bumpDemo.blend  bumpDemo.blend1
bevy_hopf/src/: hopf.rs  lib.rs
dial/: Cargo.toml  README.md
dial/src/: main.rs
lib/: Cargo.toml
lib/src/: binary_search.rs  fibre.rs  length.rs  lib.rs  mesh.rs  normalize.rs  obj.rs  sp.rs
point2ply/: Cargo.toml  a.ply  go.sh  golden.ply  half.ply  prod.sh
point2ply/src/: main.rs
points2Obj/: Cargo.toml
points2Obj/src/: main.rs
points2Obj_lines/: Cargo.toml  go.sh  prod.sh
points2Obj_lines/src/: main.rs
points2Obj_mesh/: Cargo.toml  go.sh
points2Obj_mesh/src/: main.rs
