[package]
name = "bevy_hopf"
version = "0.1.0"
description = "A bevy plugin, that allow rendering of a hopf mesh"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
bevy = "0.17.3"
bevy_mesh = "0.17.3"
bevy_asset = "0.17.3"
bevy_picking = "0.17.3"
bevy_mod_mesh_tools = { git = "https://github.com/DGriffin91/bevy_mod_mesh_tools.git", branch="main"}
hopf = { path = "../lib" }
thiserror = "2.0.16"
glam = "0.30.9"

[[example]]
name = "interactive"
