[package]
name = "hopf"
version = "0.1.0"
description = "Hopf fibre Utilities"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

