[package]
name = "point2obj"
version = "0.1.0"
authors.workspace = true
description = "Generates a hopf fibration circles"
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
hopf = { path = "../lib" }
